--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#987"
-    app:adaptType="fitX"
-    app:layout_heightSpec="1334"
-    app:layout_widthSpec="750">
+    app:adaptType="fitY"
+    app:layout_heightSpec="1334">
 
     <ImageView
         android:id="@+id/iv_image"
