--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -7,14 +7,44 @@
     app:layout_heightSpec="1920"
     app:layout_widthSpec="1080">
 
+    <ImageView
+        android:id="@+id/iv_1"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#f00" />
+
+
+    <ImageView
+        android:id="@+id/iv_3"
+        android:layout_width="150dp"
+        android:layout_height="match_parent"
+        android:background="#f0f" />
+
+    <ImageView
+        android:id="@+id/iv_2"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_alignParentBottom="true"
+        android:background="#ff0" />
+
+    <ImageView
+        android:id="@+id/iv_4"
+        android:layout_width="40dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:background="#0ff" />
 
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginTop="500dp"
-        android:layout_marginRight="100dp"
+        android:layout_above="@id/iv_2"
+        android:layout_below="@id/iv_1"
         android:layout_centerInParent="true"
+        android:layout_toLeftOf="@id/iv_4"
+        android:layout_toRightOf="@id/iv_3"
         android:background="#fff" />
+
+
 
 
 </com.example.meitu.layouttest.RatioRelativeLayout>
